--- a/src/index.css
+++ b/src/index.css
@@ -14,8 +14,8 @@
 }
 
 a {
-  font-weight: 500;
-  color: #646cff;
+  font-weight: 600;
+  color: #ff6467;
   text-decoration: inherit;
 }
 a:hover {
