added telegram login mobile

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,36 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body {
+    margin: 0;
+    background-color: rgb(18, 18, 18);
+  }
+  
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  p {
+      margin: 0;
+      padding: 0;
+  }
+  
+  address {
+      font-style: normal;
+  }
+  
+  a {
+      text-decoration: none;
+      color: inherit;
+  }
+  
+  ul,
+  ol {
+      list-style: none;
+      padding-left: 0;
+      margin: 0;
+  }
+
+  
