--- a/src/index.css
+++ b/src/index.css
@@ -33,4 +33,30 @@ body {
       margin: 0;
   }
 
+  @keyframes fadeIn {
+    0% {
+      opacity: 0.5;
+    }
+    50% {
+      opacity: 1;
+    }
+    100% {
+      opacity: 0.5;
+    }
+  }
   
+  .ring-container {
+    animation: fadeIn 3s ease-in-out infinite; /* Анимация на 3 секунды с бесконечным циклом */
+  }
+  
+  .ring-container:nth-child(1) {
+    animation-delay: 0s; /* Первое кольцо начинается немедленно */
+  }
+  
+  .ring-container:nth-child(2) {
+    animation-delay: 1s; /* Второе кольцо начинается через 1 секунду */
+  }
+  
+  .ring-container:nth-child(3) {
+    animation-delay: 2s; /* Третье кольцо начинается через 2 секунды */
+  }
